# labcode

./: .gitpod.Dockerfile  .gitpod.yml  README  README.md  cabal.project  cabal.project.freeze  practicals.cabal
.github/workflows/: ci.yml
bam/: bam.cabal
bam/src/: Bam.hs  BamAST.hs  BamC.hs  Instr.hs  Lexer.x  Main.hs  Parser.y  State.hs  Var.hs
bam/test/: divab.am  fact10.am  factn.am  factx.am  fib5.am  fibn.am  gcd-opt.am  gcd.am
blam/: blam.cabal
blam/src/: Blam.hs  BlamAST.hs  Lexer.x  Main.hs  Parser.y
blam/test/: divab.am  factn.am  factx.am  fib5.am  fibn.am  gcd-opt.am  gcd.am
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
reg/: reg.cabal
reg/src/: Automata.hs  NonDet.hs  RegExp.hs  TrSys.hs  Vis.hs
reg/test/: AutomataTests.hs  RegExpTests.hs  Test.hs  TrSysTests.hs
src/: Automata.hs  RegExp.hs  TrSys.hs  Vis.hs
test/: Test.hs  TrSysTests.hs
while/: while.cabal
while/src/: Goedel.hs  Lexer.x  LexerExt.x  Parser.hs  ParserExt.hs  While.hs  WhileAST.hs  WhileC.hs  WhilePG.hs
while/test/: ParserTests.hs  Test.hs  divab.while  fact.while
