cabal-version:      2.4
name:               practicals
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Steven Ramsay
maintainer:         steven.ramsay@bristol.ac.uk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: 

library

  exposed-modules:  TrSys, Automata, RegExp, Vis
  other-extensions: OverloadedStrings
  build-depends:    base ^>=4.15.0.0, containers, graphviz, text, random
  default-language: Haskell2010
  hs-source-dirs:   src 

test-suite test

  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  other-modules:    TrSysTests
  build-depends:    base ^>=4.15.0.0, tasty ^>= 1.4, practicals, tasty-hunit, containers