cabal-version:       2.4
name:                bam
version:             0.1.0.0
synopsis:            The Bristol Abstract Machine
author:              François Dupressoir
maintainer:          f.dupressoir@bristol.ac.uk
build-type:          Simple

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:

executable bamc
  -- exposed-modules:
  build-tools:        alex, happy
  other-modules:      BamAST
                      Lexer, Parser
  build-depends:      base         >=4.14.0.0 && < 4.17.0.0,
                      array,
                      containers   >= 0.6.4 && < 0.7,
                      blam
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -main-is BamC
  hs-source-dirs:     src
  main-is:            BamC.hs
  default-language:   Haskell2010

executable bam
  -- exposed-modules:
  build-tools:        alex, happy
  other-modules:      BamAST
                      Bam
                      Lexer, Parser
  build-depends:      base         >=4.14.0.0 && < 4.17.0.0,
                      array,
                      containers   >= 0.6.4 && < 0.7,
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   Haskell2010

library

  exposed-modules:    BamAST, Bam
  other-modules:      Lexer, Parser
  build-tools:        alex, happy
  build-depends:      base         >=4.14.0.0 && < 4.17.0.0,
                      array,
                      containers   >= 0.6.4 && < 0.7,
  default-language:   Haskell2010
  hs-source-dirs:     src
