cabal-version:      2.4
name:               reg
version:            0.1.0.0
synopsis:           Code associated with the first two practicals of COMS20007
author:             Steven Ramsay
maintainer:         steven.ramsay@bristol.ac.uk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: 

library

  exposed-modules:  TrSys, Automata, RegExp, NonDet, Vis
  other-extensions: OverloadedStrings
  build-depends:    base         >=4.14.0.0 && < 4.16.0.0,
                    containers   >= 0.6.4 && < 0.7,
                    graphviz     >= 2999.20.1 && < 2999.21,
                    text         >= 1.2.4 && < 1.3,
                    random       >= 1.2.0 && < 1.3
  default-language: Haskell2010
  hs-source-dirs:   src 

test-suite test

  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  other-modules:    TrSysTests 
                    RegExpTests 
                    AutomataTests
  build-depends:    base >=4.14.0.0 && < 4.16.0.0, 
                    tasty ^>= 1.4, 
                    tasty-hunit ^>= 0.10.0.3, 
                    containers >= 0.6.4 && < 0.7,
                    reg