cabal-version:      2.4
name:               while
version:            0.1.0.0
synopsis:           Code associated with the third and fourth practicals of COMS20007
author:             François Dupressoir
maintainer:         f.dupressoir@bristol.ac.uk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:

executable while
  -- exposed-modules:
  build-tools:        alex, happy
  other-modules:      WhileAST
                      Lexer, Parser
                      LexerExt, ParserExt
  build-depends:      base, array, containers
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -main-is While
  hs-source-dirs:     src
  main-is:            While.hs
  default-language:   Haskell2010

library

  exposed-modules:     While, WhileAST, WhilePG, Parser, Lexer
                       LexerExt, ParserExt
  build-tools:         alex
  other-extensions:    OverloadedStrings
  build-depends:       base         >=4.14.0.0 && < 4.16.0.0,
                       array        >=0.5.4.0,
                       containers   >= 0.6.4 && < 0.7,
                       graphviz     >= 2999.20.1 && < 2999.21,
                       text         >= 1.2.4 && < 1.3,
                       random       >= 1.2.0 && < 1.3
  default-language:    Haskell2010
  hs-source-dirs:      src

test-suite test

  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  other-modules:    ParserTests
  build-depends:    base >=4.14.0.0 && < 4.16.0.0,
                    tasty ^>= 1.4,
                    tasty-hunit ^>= 0.10.0.3,
                    containers >= 0.6.4 && < 0.7,
                    while
